--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+xxhash-rust = { version = "*", features = ["xxh3", "const_xxh3"] }
 
 [profile.release]
 opt-level = 3
