--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rand = "0.8.5"
-xxhash-rust = { version = "*", features = ["xxh3", "const_xxh3"] }
+xxhash-rust = { version = "*", features = ["xxh3"] }
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "benchy"
+harness = false
 
 [profile.release]
-panic = 'abort'
 opt-level = 3
 lto = true
 strip = true
